# pysecop

./: .coverage  .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  coverage.xml  docker-entrypoint.sh  make.bat  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml  tests.yml
docs/: ARCHITECTURE.md  GUIDE.md  USE_CASES.md
experiments/: README.md  example.ipynb  example_usage.py
pysecop/: __init__.py  client.py  config.py  logging_setup.py  processor.py  query_builder.py
tests/: test_client.py  test_processor.py  test_query_builder.py
